--- a/app/src/main/res/layout/activity_system_video_player.xml
+++ b/app/src/main/res/layout/activity_system_video_player.xml
@@ -14,4 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true" />
+
+    <include layout="@layout/media_controller" />
+
 </RelativeLayout>
