--- a/app/src/main/res/layout/activity_audio_player.xml
+++ b/app/src/main/res/layout/activity_audio_player.xml
@@ -40,6 +40,7 @@
             android:textSize="18sp" />
 
     </RelativeLayout>
+
     <LinearLayout
         android:id="@+id/ll_bottom"
         android:layout_width="match_parent"
@@ -119,10 +120,10 @@
 
 
     <com.atguigu.mobileplayer0224.view.LyricShowView
+        android:id="@+id/lyric_show_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/rl_top"
         android:layout_above="@+id/ll_bottom"
-        />
+        android:layout_below="@id/rl_top" />
 
 </RelativeLayout>
