--- a/app/src/main/res/layout/all_ad_item.xml
+++ b/app/src/main/res/layout/all_ad_item.xml
@@ -4,9 +4,23 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:text="我是软件广告"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#55888888" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/bg_activities_item_end_transparent"
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
+
+
+        <include layout="@layout/ad_middle" />
+
+    </LinearLayout>
 
 </LinearLayout>
