--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,5 +48,14 @@
             style="@style/myStyle"
             android:drawableTop="@drawable/rb_net_video_selector"
             android:text="网络视频" />
+
+        <RadioButton
+            android:id="@+id/rb_recyclerview"
+            style="@style/myStyle"
+            android:drawableTop="@drawable/rb_net_video_selector"
+            android:text="recyclerview" />
+
+
+
     </RadioGroup>
 </LinearLayout>
